--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.8.2",
     "@parcel/transformer-sass": "^2.8.2",
-    "parcel": "^2.8.2",
     "@parcel/transformer-webmanifest": "^2.8.2",
+    "parcel": "^2.8.2",
     "patch-package": "^6.5.0",
     "process": "^0.11.10"
   },
@@ -13,7 +13,8 @@
     "@codemirror/lang-javascript": "^6.1.2",
     "@codemirror/lang-python": "^6.1.0",
     "bulma": "^0.9.4",
-    "codemirror": "^6.0.1"
+    "codemirror": "^6.0.1",
+    "idb": "^7.1.1"
   },
   "name": "simple-text-editor",
   "description": "That's all it is",
