--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@parcel/packager-raw-url": "^2.8.2",
     "@parcel/transformer-sass": "^2.8.2",
     "@parcel/transformer-webmanifest": "^2.8.2",
+    "buffer": "^5.7.1",
     "parcel": "^2.8.2",
     "patch-package": "^6.5.0",
     "process": "^0.11.10"
