--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.8.2",
-    "@parcel/transformer-sass": "^2.8.2",
-    "@parcel/transformer-webmanifest": "^2.8.2",
-    "buffer": "^5.7.1",
-    "parcel": "^2.8.2",
-    "patch-package": "^6.5.0",
+    "@parcel/packager-raw-url": "^2.9.3",
+    "@parcel/service-worker": "^2.9.3",
+    "@parcel/transformer-sass": "^2.9.3",
+    "@parcel/transformer-webmanifest": "^2.9.3",
+    "@types/serviceworker": "^0.0.72",
+    "@types/wicg-file-system-access": "^2020.9.6",
+    "@types/wicg-web-app-launch": "^2023.1.0",
+    "parcel": "^2.9.3",
+    "patch-package": "^7.0.2",
     "process": "^0.11.10"
   },
   "dependencies": {
@@ -33,8 +36,9 @@
   },
   "author": "grimsteel",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/For-0/simple-text-editor/issues"
-  },
-  "homepage": "https://github.com/For-0/simple-text-editor#readme"
+  "private": true,
+  "browserslist": "Chrome > 90, Edge > 90",
+  "@parcel/runtime-js": {
+    "splitManifestThreshold": 99999999
+  }
 }
